<resources>
    <string name="api_url">http://simplyposted.net/</string>
    <string name="app_name">SimplyPosted</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>

    <!-- login activity -->
    <string name="activity_login_tv_welcome">Welcome</string>
    <string name="activity_login_bt_login">Login</string>
    <string name="activity_login_hint_email">@string/email</string>
    <string name="activity_login_hint_password">Password</string>
    <string name="activity_login_forgot_pass">Forgot password?</string>
    <string name="activity_login_create_account_text">Not registered? <u>Create account</u></string>

    <!-- registration activity -->
    <string name="activity_registration_registration_text">Registration</string>
    <string name="activity_registration_hint_confirm_password">Confirm password</string>
    <string name="activity_registration_ok_button">OK</string>
    <string name="activity_registration_cancel_button">Cancel</string>
    <string name="activity_registration_tv_signin">Already have an account?&#160;</string>
    <string name="activity_registration_bottom_text2">Sign in</string>

    <!-- item post main -->
    <string name="item_post_main_headline">Headline</string>
    <string name="item_post_main_skip_button">Reject</string>
    <string name="item_post_main_accept_button">Accept</string>
    <string-array name="social_list">
        <item>FB</item>
        <item>Ln</item>
        <item>Tw</item>
        <item>Inst</item>
    </string-array>

    <!--menu_main-->
    <string name="menu_action_settings">Settings</string>
    <string name="menu_scheduled_posts">Scheduled Post</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_logout">Logout</string>


    <string name="share_text">Check the app at play market: https://play.google.com/store/apps/details?id=</string>
    <string name="no_share_app">There is no app to share the content with</string>

    <string name="login_email_dialog_title">Login field</string>
    <string name="login_email_dialog_text">Please enter your email</string>
    <string name="login_password_dialog_title">Password field</string>
    <string name="login_password_dialog_text">Please enter your password</string>
    <string name="wrong_email_format_dialog_title">@string/email</string>
    <string name="wrong_email_format_dialog_text">Invalid email</string>
    <string name="wrong_password_format_dialog_title">Password</string>
    <string name="wrong_password_format_dialog_text">Please improve your password</string>
    <string name="registration_confirm_password_dialog_title">Confirm password</string>
    <string name="registration_confirm_password_dialog_text">Wrong confirm password</string>

    <string name="fragment_registration_social_accounts">Connect you Social Accounts</string>
    <string name="fragment_registration_step1_next_button">NEXT STEP</string>
    <string name="fragment_registration_step1_tv_facebook">FaceBook</string>
    <string name="fragment_registration_step1_tv_linkedin">LinkedIn</string>
    <string name="fragment_registration_step1_tv_twitter">Twitter</string>
    <string name="fragment_registration_step1_tv_instagram">Instagram</string>

    <string name="fragment_registration_step2_et_name">Name</string>
    <string name="fragment_registration_step2_et_phone">Phone</string>
    <string name="fragment_registration_step2_sipzode">Zip code</string>
    <string name="fragment_registration_step2_tone_and_voice">Tone and Voice</string>
    <string name="fragment_registration_step2_business_details">Business details</string>
    <string name="fragment_registration_step2_tv_playful">Playful</string>
    <string name="fragment_registration_step2_tv_corporate">Corporate</string>
    <string name="fragment_registration_step2_tv_local">Local</string>
    <string name="fragment_registration_step2_tv_general">General</string>
    <string name="fragment_registration_step2_tv_topical">Topical</string>
    <string name="fragment_registration_step2_tv_promotional">Promotional</string>
    <string name="fragment_registration_step2_et_additional_info">Additional information</string>
    <string name="not_match_passwords_dialog_title">Passwords</string>
    <string name="not_match_passwords__dialog_text">Passwords don\'t match</string>
    <string name="activity_registration_form_btn_next_step">Next Step</string>

    <string name="fragment_registration_step3_title">Choose package</string>
    <string name="fragment_registration_step3_chk_entry">Entry Level Package</string>
    <string name="fragment_registration_step3_descr">Some description</string>
    <string name="fragment_registration_step3_chk_basic">Basic Level Package</string>
    <string name="fragment_registration_step3_chk_pro">Pro Level Package</string>
    <string name="fragment_step2_name_title">Name</string>
    <string name="fragment_step2_name_text">Please enter your name</string>
    <string name="fragment_step2_phone_title">Phone</string>
    <string name="fragment_step2_phone_text">Please enter your phone</string>
    <string name="fragment_social_account_connected">Connected</string>

    <string name="fragment_registration_step3_entry_array">&#8226;&#160;&#160;&#160;2 Social Posts Weekly\n&#8226;&#160;&#160;&#160;Local &amp; Relevant Content\n&#8226;&#160;&#160;&#160;Links to your Website\n&#8226;&#160;&#160;&#160;Dashboard Access for 1 User\n&#8226;&#160;&#160;&#160;Optimized Sheduling</string>
    <string name="fragment_registration_step3_basic_array">&#8226;&#160;&#160;&#160;2 Social Posts Weekly\n&#8226;&#160;&#160;&#160;Local &amp; Relevant Content\n&#8226;&#160;&#160;&#160;Links to your Website\n&#8226;&#160;&#160;&#160;Dashboard Access for 2 User\n&#8226;&#160;&#160;&#160;Optimized Sheduling\n&#8226;&#160;&#160;&#160;250 Word Blog, 2 Monthly</string>
    <string name="fragment_registration_step3_pro_array">&#8226;&#160;&#160;&#160;5 Social Posts Weekly\n&#8226;&#160;&#160;&#160;Local &amp; Relevant Content\n&#8226;&#160;&#160;&#160;Links to your Website\n&#8226;&#160;&#160;&#160;Unlimited Dashboard Access\n&#8226;&#160;&#160;&#160;Optimized Sheduling\n&#8226;&#160;&#160;&#160;550 Word Blog, 4 Monthly\n&#8226;&#160;&#160;&#160;Improved Search Ranking</string>

    <!-- activity settings -->
    <string name="menu_action_save">Save</string>
    <string name="activity_settings_menu_saved">Saved</string>
    <string name="activity_settings_menu_social_networks">Social</string>
    <string name="activity_settings_menu_settings">Settings</string>
    <string name="activity_settings_menu_package">Package</string>
    <string name="fragment_registration_step2_smctext">Please tell us which categories apply for your social media content. Feel free to select more than one.</string>
    <string name="fragment_registration_step2_homeselling">Homeselling</string>
    <string name="fragment_registration_step2_foreclosure">Foreclosure</string>
    <string name="fragment_registration_step2_firsttimehomebuers">First Time Homebuyers</string>
    <string name="fragment_registration_step2_homeownership">Homeownership</string>
    <string name="fragment_registration_step2_homebuying">Home Buying</string>
    <string name="fragment_registration_step2_investing">Investing</string>
    <string name="fragment_registration_step2_iamarealtor">I am a \"Realtor\"</string>
    <string name="fragment_registration_step2_propertymanagement">Property Management</string>
    <string name="fragment_social_account_not_connected">Not connected</string>
    <string name="fragment_registration_step3_tv_entry"><b>$38</b> / per month</string>
    <string name="fragment_registration_step3_tv_basic"><b>99$</b> / per month</string>
    <string name="fragment_registration_step3_tv_pro"><b>$149</b> / per month</string>
    <string name="activity_reg_form_btn_finish">Finish</string>


    <!-- forgot password activity -->
    <string name="activity_forgot_tv_title">Forgot password?</string>
    <string name="activity_forgot_tv_text">Don’t worry! Just fill in your email and we’ll help you reset your password.</string>
    <string name="activity_forgot_bt_send">Send email</string>
    <string name="activity_forgot_hint_email">@string/email</string>
    <string name="activity_forgot_tv_login">Back to login</string>
    <string name="activity_forgot_alert_success">Password reset e-mail has been sent</string>

</resources>