<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_about_share"
        android:icon="@drawable/ic_action_navigation_share"
        android:title="@string/menu_action_share"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_action_navigation_more"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/menu_action_settings"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_scheduled_posts"
                android:title="@string/menu_scheduled_posts"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>