<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingStart="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_registration_step3_text"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/fragment_registration_step3_chk_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_step3_chk_entry"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/fragment_registration_step3_descr"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"/>

    <CheckBox
        android:id="@+id/fragment_registration_step3_chk_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_step3_chk_basic"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/fragment_registration_step3_descr"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorPrimary"
        android:layout_marginBottom="20dp"/>
    <CheckBox
        android:id="@+id/fragment_registration_step3_chk_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_step3_chk_pro"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/fragment_registration_step3_descr"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorPrimary"/>


</LinearLayout>